# shhf

./: Cargo.toml  README.md
app/: index.html
app/assets/: Admin.30c7c22a.js  Admin.3b301b63.js  Admin.4df9226f.js  Admin.cb5bea90.js  Admin.dc7a4d0c.js  Blog.3242740e.js  Blog.44209877.js  Blog.77b6a3d8.js  Blog.bebe8231.js  Blog.d5ae7c8b.js  index.163d5c4e.js  index.2de02a5d.js  index.3a74b2a2.js  index.4491e623.js  index.78f7b7f0.css  index.aa378378.css  index.b931d09d.js
src/: admin.rs  api.rs  auth.rs  brainfart.rs  main.rs  menuitems.rs  user_token.rs
