[package]
name = "worlddominator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7.1"
# mongodb = "2.3.0"
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls","chrono","time","mysql", ] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
pwhash = "1"
reqwest = { version = "0.11", features = ["json","blocking"] }
regex = "1.5"
rand = "0.8.5"
anyhow = "1.0.62"
